--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-
+    
   </head>
   <body ng-app="starter">
 
@@ -38,5 +38,7 @@
         have templates inline in this html file if you'd like).
       -->
       <ion-nav-view></ion-nav-view>
+      <script src="js/p2.min.js"></script>
+      <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
