Estilo para la ruleta

--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     <script src="lib/parse/parse.min.js"></script>
     <script src="lib/openfb/openfb.js"></script>
     <script src="lib/openfb/ngopenfb.js"></script>
-    <script src="js/p2.min.js"></script>
+    <script src="js/ng-cordova.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
