--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,8 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/TriviaController.js"></script>
+    <script src="js/TopTriviaController.js"></script>
     <script src="js/services.js"></script>
 
   </head>
